# OpenClaw-for-M5Stack-CoreS3

./: .gitignore  CMakeLists.txt  README.md  install.bat  sdkconfig.defaults
docs/: hardware-validation-log.md  home-network-capability-governance.md  openclaw-stackchan-protocol.md  openclaw-stackchan-roadmap.md  pre-residency-engineering-plan.md  protocol-governance.md  release-readiness-checklist.md  windows-bridge-code-governance.md  windows-bridge-openclaw-integration.md
docs/examples/: protocol-valid-messages.jsonl
docs/schema/: openclaw-stackchan-message.schema.json
main/: CMakeLists.txt  Kconfig.projbuild  audiodriver.c  audiodriver.h  body_service.c  body_service.h  button.c  button.h  emotions.h  emotions_data.c  i2c_bus.c  i2c_bus.h  lcddriver.c  lcddriver.h  leddriver.c  leddriver.h  main.c  presence.c  presence.h  protocol.c  protocol.h  py32driver.c  py32driver.h  scservo_bus.c  scservo_bus.h  servodriver.c  servodriver.h
tests/windows_bridge/: test_body_tools_memory.py  test_bridge.py  test_events_runtime.py  test_face_tracking.py  test_home_network_capabilities.py  test_home_network_skeleton.py  test_lifecycle.py  test_mqtt_bus.py  test_resident_loop.py
windows_bridge/: README.md  config.example.json  config.local.example.json  install_bridge_service.ps1  local_memory_context.example.json  openclaw_stackchan_bridge.py
windows_bridge/examples/: face_tracking_loop.py  home_network_skeleton.py  openclaw_body_client.py  resident_conversation_loop.py  stackchan_runtime.py
windows_bridge/openclaw_bridge/: __init__.py  asr.py  audio_pipeline.py  (+16 more)
(+7 files in other folders)
